compiler/tools/fpp-check/test/invalid_symbols/topology_as_qualifier.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/invalid_symbols/topology_as_qualifier.fpp:3.10
  import M.T
         ^
error: invalid symbol M: not a qualifier
symbol is defined here:
[ local path prefix ]/compiler/tools/fpp-check/test/invalid_symbols/topology_as_qualifier.fpp:1.1
topology M {
^
